# scion

./: .gitignore  BUILD.bazel  COLIBRI_README.md  Makefile  README.md  WORKSPACE  experiment.sh  experiment_udp.sh  go.mod  go.sum  nogo.json  scion.sh
.circleci/: config.yml
docker/perapp/: BUILD.bazel
env/debian/: pkgs.txt
env/pip3/: requirements.txt
go/beacon_srv/internal/beaconing/: extender.go
go/border/: flowmonitoring.go  io.go  router.go  setup.go  sibra.go
go/border/conf/: conf.go
go/border/metrics/: metrics.go
go/border/rctrl/: ctrl.go
go/border/rpkt/: extn_sibra.go  extns.go  path.go  process.go  rpkt.go  sibra.go
go/cert_srv/: BUILD.bazel  main.go  setup.go
go/cert_srv/internal/config/: BUILD.bazel  config.go  config_test.go  drkey.go  drkey_test.go  sample.go  state.go  state_test.go
go/cert_srv/internal/csconfig/: conf_test.go  sample.go
go/cert_srv/internal/drkey/: BUILD.bazel  prefetcher.go  prefetcher_test.go  secret_value_store.go  service_store.go  store_test.go  testcommon.go
go/cert_srv/internal/drkey/testdata/as111/certs/: ISD1-ASff00_0_111-V1.crt
go/cert_srv/internal/drkey/testdata/as111/keys/: as-decrypt.key  as-sig.seed  master0.key  master1.key
go/cert_srv/internal/drkey/testdata/as112/certs/: ISD1-ASff00_0_112-V1.crt  ISD1-V1.trc
go/cert_srv/internal/drkey/testdata/as112/keys/: as-decrypt.key  as-sig.seed  master0.key  master1.key
go/examples/sibra_bandwidth/: bandwidth.go  messages.go
go/examples/sibra_bandwidth_quic/: bandwidth.go
go/examples/sibra_quic/: README.md  pingpong.go
go/examples/sibra_rpt/: README.md  pingpong.go
go/godispatcher/: main.go
go/lib/addr/: isdas.go
go/lib/ctrl/: BUILD.bazel  ctrl.go  union.go
go/lib/ctrl/drkey_mgmt/: BUILD.bazel  drkey_lvl1_rep.go  drkey_lvl1_req.go  drkey_lvl2_rep.go  drkey_lvl2_req.go  drkey_mgmt.go
go/lib/ctrl/seg/: BUILD.bazel  as.go  watchdog_extn.go
go/lib/ctrl/sibra_mgmt/: bandwidth_exceeded.go  ext_req.go  instruct.go  sibra_mgmt.go  steady_block_meta.go  steady_recs.go  steady_reg_rep.go  steady_rep.go  steady_req.go
go/lib/drkey/: BUILD.bazel  db.go  drkey.go  epoch.go  level1.go  level2.go  secret_value.go  suite.go
go/lib/drkey/drkeydbsqlite/: BUILD.bazel  common.go  db_test.go  lvl1db.go  lvl2db.go
go/lib/drkey/protocol/: BUILD.bazel  delegated.go  piskes.go  protocol.go  protocol_test.go  scmp.go  standard.go
go/lib/drkeystorage/: BUILD.bazel  config.go  config_test.go  sample.go  store.go
go/lib/env/: logging.go
go/lib/hpkt/: read.go
go/lib/infra/: BUILD.bazel  common.go
go/lib/infra/messenger/: BUILD.bazel  messenger.go  messenger_with_metrics.go  mock.go  quic_response_writer.go  udp_response_writer.go
go/lib/infra/mock_infra/: BUILD.bazel  infra.go
go/lib/log/: BUILD.bazel
go/lib/ringbuf/: metrics.go
go/lib/sciond/: BUILD.bazel  reconn.go  sciond.go  types.go
go/lib/sciond/mock_sciond/: BUILD.bazel  sciond.go
go/lib/sibra/: types.go
go/lib/sibra/flowmonitor/: blacklist.go  flowmonitor.go  statefulfm.go  statelessfm.go
go/lib/sibra/resvdb/: resvdb.go
go/lib/sibra/resvdb/conn/: conn.go
go/lib/sibra/sbcreate/: create.go
go/lib/sibra/sbextn/: base.go  ephemeral.go  ephemeral_test.go  steady.go  steady_test.go
go/lib/sibra/sbreq/: confirm.go  confirm_test.go  ephem_clean.go  ephem_clean_test.go  ephem_failed.go  ephem_failed_test.go  ephem_req.go  ephem_req_test.go  offer.go  offer_test.go  pld.go  pld_test.go  steady_req.go  steady_req_test.go  steady_succ.go  steady_succ_test.go  types.go
go/lib/sibra/sbresv/: block.go  block_test.go  info.go  info_test.go  sof.go  sof_test.go
go/lib/snet/: addr.go  conn.go
go/lib/spath/: path.go
go/lib/spath/spathmeta/: apppath.go
go/lib/spkt/: spkt.go
go/lib/spse/: spse.go
go/lib/util/: time.go
go/path_srv/internal/handlers/: segreq.go  segreqcore.go  segreqnoncore.go  segreqnoncore_test.go
go/path_srv/internal/psconfig/: sample.go  sample_test.go
go/proto/: BUILD.bazel  asm_exts.capnp.go  drkey_mgmt.capnp.go  gen.go  path_seg.capnp.go  sciond.capnp.go  watchdog.capnp.go
go/sciond/: BUILD.bazel  main.go
go/sciond/internal/config/: BUILD.bazel  config.go
go/sciond/internal/drkey/: BUILD.bazel  client_store.go
go/sciond/internal/sdconfig/: sample.go  sample_test.go
go/sciond/internal/servers/: BUILD.bazel  handlers.go
go/sibra_srv/: external.go  main.go  setup.go
go/sibra_srv/adm/: ephem_handler.go  promote.go  steady_handler.go
go/sibra_srv/conf/: conf.go  local_resvs.go  master.go  settings.go  settings_test.go
go/sibra_srv/conf/testdata/: matrix.yml  reservations.json
go/sibra_srv/metrics/: metrics.go  prometheusclient.go
go/sibra_srv/resvd/: master.go  register.go  requesters.go  reserver.go  telereserver.go
go/sibra_srv/resvd/controller/: basiccontroller.go  predictioncontroller.go  rsvcontroller.go
go/sibra_srv/sbalgo/: sbalgo.go
go/sibra_srv/sbalgo/impl/: ephem_admission.go  sibra_base.go  sibra_fast.go  sibra_fast_test.go  sibra_slow.go  sibra_slow_test.go  sibra_test.go  steady_admission.go
go/sibra_srv/sbalgo/state/: ephem_map.go  ephem_resv.go  intf_info.go  matrix.go  matrix_test.go  provider.go  provider_test.go  state.go  steady_map.go  steady_resv.go  temp.go
go/sibra_srv/util/: util.go
go/sibrad/resvmgr/: defines.go  infra_handlers.go  requesters.go  resolve_steady.go  resolver.go  resvmgr.go  store.go  whitelist.go
go/sibrad/syncresv/: syncresv.go
go/sig/internal/sigconfig/: conf_test.go  sample.go
go/tools/showpaths/: paths.go
hsr/: Integration_test.md  README.md  libdpdk.c  scion.c
proto/: asm_exts.capnp  ctrl_pld.capnp  drkey_mgmt.capnp  path_seg.capnp  sciond.capnp  sibra.capnp  watchdog.capnp
python/beacon_server/: base.py  if_state.py
python/integration/: set_ipv6_addr.py
python/lib/: defines.py  path_store.py
python/lib/packet/: packet_base.py
python/scion_elem/: scion_elem.py
python/test/lib/: path_store_test.py
python/topology/: config.py  generator.py  sig.py  zk.py
tools/ci/: prepare_image
topology/: Simple.topo  generator.py
topology/mininet/: README.md  topology.py
(+12 files in other folders)
