load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "drkey_lvl1_rep.go",
        "drkey_lvl1_req.go",
        "drkey_lvl2_rep.go",
        "drkey_lvl2_req.go",
        "drkey_mgmt.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/ctrl/drkey_mgmt",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/proto:go_default_library",
    ],
)
