load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client_store.go"],
    importpath = "github.com/scionproto/scion/go/sciond/internal/drkey",
    visibility = ["//go/sciond:__subpackages__"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/ctrl/drkey_mgmt:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/drkeystorage:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/util:go_default_library",
    ],
)
